--- a/impressum.html
+++ b/impressum.html
@@ -376,7 +376,7 @@
 
             <h2>Haftung für Inhalte</h2>
             <p>
-                Als Privatperson bin ich gemäß § 7 Abs. 1 TMG für eigene Inhalte verantwortlich.<br>
+                Gemäß § 7 Abs. 1 TMG für eigene Inhalte verantwortlich.<br>
                 Für Inhalte verlinkter externer Websites übernehme ich keine Haftung.
             </p>
         </div>
