--- a/en/index_en.html
+++ b/en/index_en.html
@@ -16,7 +16,7 @@
     <meta name="twitter:description" content="Help your music get heard. truecatspr offers customized promotion for artists.">
     <meta name="twitter:image" content="banner2.jpeg">
     <title>truecatspr - Music Promotion</title>
-    <link rel="icon" type="image/x-icon" href="../assets/img/catfavicon.ico">
+    <link rel="icon" type="../assets/img/catfavicon.ico" href="../assets/img/catfavicon.ico">
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
