--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <meta name="twitter:description" content="Help your music get heard. truecatspr offers customized promotion for artists.">
     <meta name="twitter:image" content="banner2.jpeg">
     <title>truecatspr - Music Promotion</title>
-    <link rel="icon" type="catfavicon.ico" href="catfavicon.ico">
+    <link rel="icon" type="image/x-icon" href="catfavicon.ico">
+<link rel="apple-touch-icon" href="catfavicon.ico">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
