--- a/de/index_de.html
+++ b/de/index_de.html
@@ -88,7 +88,7 @@
                 <p class="copyright">&copy; 2025 truecatspr. Alle Rechte vorbehalten.</p>
             </div>
             <div class="social-bar">
-                <a href="https://facebook.com/truecatspr" class="social-btn" target="_blank" rel="noopener">
+                <a href="https://www.facebook.com/profile.php?id=61573133279165&sk=about_contact_and_basic_info&locale=de_DE" class="social-btn" target="_blank" rel="noopener">
                     <i class="fab fa-facebook-f"></i>
                 </a>
                 <a href="https://www.instagram.com/truecatspr/" class="social-btn" target="_blank" rel="noopener">
