--- a/en/blog_en.html
+++ b/en/blog_en.html
@@ -132,7 +132,7 @@
     <script>
         // Article Database (URLs to HTML articles)
         const articles = {
-            artistBioGuide: "beckedorf.html",
+            artistBioGuide: "beckedorf_Spotlight.html",
             pressReleaseGuide: "path/to/pressReleaseGuide.html",
             lyricVideoGuide: "path/to/lyricVideoGuide.html",
             lyricCommentaryGuide: "path/to/lyricCommentaryGuide.html",
