--- a/en/contact_en.html
+++ b/en/contact_en.html
@@ -57,7 +57,7 @@
 
         <div class="section contact-info">
             <p>Or contact us directly</p>
-            <h3><a href="mailto:truecats@gmail.com">truecats@gmail.com</a></h3>
+            <h3><a href="mailto:truecats@gmail.com">truecatspr@gmail.com</a></h3>
         </div>
     </div>
 
