--- a/de/contact_de.html
+++ b/de/contact_de.html
@@ -58,7 +58,7 @@
 
         <div class="section contact-info">
             <p>oder kontaktiere uns direkt</p>
-            <h3><a href="mailto:truecats@gmail.com">truecats@gmail.com</a></h3>
+            <h3><a href="mailto:truecats@gmail.com">truecatspr@gmail.com</a></h3>
         </div>
     </div>
 
